# gearonos

./: .env  .gitignore  pyproject.toml
.history/pi_agent/: living_system_20240116193511.py  living_system_20240116193512.py  living_system_20240116193515.py  living_system_20240116193517.py  living_system_20240116193518.py  living_system_20240116193519.py  living_system_20240116193520.py  living_system_20240116193521.py  living_system_20240116193524.py  living_system_20240116193525.py  living_system_20240116193526.py  living_system_20240116193527.py  living_system_20240116193528.py  living_system_20240116193529.py  living_system_20240116193532.py  living_system_20240116193533.py  living_system_20240116193534.py  living_system_20240116193535.py  living_system_20240116193537.py  living_system_20240116193539.py  living_system_20240116193540.py  living_system_20240116193541.py  living_system_20240116193543.py  living_system_20240116193544.py  living_system_20240116193545.py  living_system_20240116193623.py  living_system_20240116193625.py  living_system_20240116193626.py  living_system_20240116193628.py  living_system_20240116193631.py  living_system_20240116194035.py  living_system_20240116194036.py  living_system_20240116194042.py  living_system_20240116194043.py  living_system_20240116194047.py  living_system_20240116194048.py  (+364 more)
data/: memories.csv
gearonos/: base_agent.py  dev_main.py  living_system.py  memories.json  memory.py  orchestrator.py  runner.py  task.py
tests/: test_agent_orchestrator_integration.py  test_memory_agent.py  test_orchestrator.py
(+426 files in other folders)
