[tool.poetry]
name = "pi-agent"
version = "0.1.0"
description = ""
authors = ["Jake Gearon <jake.gearon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.1.1"
langchain-community = "^0.0.13"
llama-cpp-python = "^0.2.29"
scikit-learn = "^1.3.2"
langchain-experimental = "^0.0.49"
jinja2 = "^3.1.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
