[tool.poetry]
name = "gearonos"
version = "0.0.1"
description = "livin life in the pi 5 ..."
authors = ["Jake Gearon <jake.gearon@gmail.com>"]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain-community = "^0.0.16"
llama-cpp-python = "^0.2.36"
scikit-learn = "^1.4.0"
langchain-experimental = "^0.0.49"
jinja2 = "^3.1.3"
ragatouille = "^0.0.6b2"
pytest = "^8.0.0"
langchain = "^0.1.4"
langchain-openai = "^0.0.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
